[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/state/state_background.png" type="Texture" id=1]
[ext_resource path="res://src/GUI/State.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/독립기념관체.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="State" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 860, 478 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="AttackContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -342.0
margin_right = 240.0
margin_bottom = -295.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/AttackContainer"]
margin_left = 10.0
margin_right = 94.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "공격력"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/AttackContainer"]
margin_left = 150.0
margin_right = 231.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5 ~ 12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/AttackContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -289.0
margin_right = 240.0
margin_bottom = -242.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/DefContainer"]
margin_left = 10.0
margin_right = 94.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "방어력"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/DefContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "120"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/DefContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CritContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -235.0
margin_right = 240.0
margin_bottom = -189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/CritContainer"]
margin_left = 10.0
margin_right = 158.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "치명타 확률"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/CritContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/CritContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CritDamageContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -177.0
margin_right = 240.0
margin_bottom = -129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/CritDamageContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "치명타 데미지"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/CritDamageContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/CritDamageContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -126.128
margin_right = 240.0
margin_bottom = -78.128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/HpContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "체력"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/HpContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/HpContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MpContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -73.476
margin_right = 240.0
margin_bottom = -25.476
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/MpContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "마나"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/MpContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite/MpContainer"]
margin_left = 310.0
margin_right = 462.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "업그레이드"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = -17.116
margin_right = 240.0
margin_bottom = 30.884
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/ExpContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "경험치"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/ExpContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = 38.317
margin_right = 240.0
margin_bottom = 86.317
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/LevelContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "레벨"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/LevelContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = 88.802
margin_right = 240.0
margin_bottom = 136.802
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/NameContainer"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "닉네임"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/NameContainer"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradePoint" type="Control" parent="Sprite"]
margin_left = -230.0
margin_top = 436.58
margin_right = 240.0
margin_bottom = 484.58
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Sprite/UpgradePoint"]
margin_left = 10.0
margin_right = 186.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "스탯포인트"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Sprite/UpgradePoint"]
margin_left = 195.0
margin_right = 276.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Sprite/AttackContainer/Button" to="." method="_on_upgrade_state" binds= [ "attack" ]]
[connection signal="pressed" from="Sprite/DefContainer/Button" to="." method="_on_upgrade_state" binds= [ "def" ]]
[connection signal="pressed" from="Sprite/CritContainer/Button" to="." method="_on_upgrade_state" binds= [ "crit" ]]
[connection signal="pressed" from="Sprite/CritDamageContainer/Button" to="." method="_on_upgrade_state" binds= [ "crit_damage" ]]
[connection signal="pressed" from="Sprite/HpContainer/Button" to="." method="_on_upgrade_state" binds= [ "hp" ]]
[connection signal="pressed" from="Sprite/MpContainer/Button" to="." method="_on_upgrade_state" binds= [ "mp" ]]
